KB-11784 | Q9 | Tech Debt | BE | Performance improvement in Profile APIs
1. Added new open source redis package - redisson-redis . This package allows us to save the List, Map as is as and retrieve the details. Json to String and viceversa conversion would be altered.
2. Updated the userprofile key to v2 .
3. Reduced the cognitive complexity of calculateProfileCompletionPercentage and implemented caching.
4. Implemented caching for getUserRoles .
5. Reduced the cognitive complexity of the sanitizeProfile.
6.Implemented the Junit test cases.